refine activity icons and descriptions